<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/app_logo"
            app:layout_constraintRight_toRightOf="@id/app_logo"
            app:layout_constraintTop_toBottomOf="@id/app_logo"
            android:layout_marginTop="22dp"
            android:textSize="36sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="8dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/paniclock_is_a_secure_lockscreen_app_that_alerts_your_loved_ones_when_you_re_in_danger_and_records_your_interactions_in_unsafe_situations_label"
            android:textColor="@android:color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_safe_pin_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:layout_marginTop="25dp"
            style="@style/ActionButtonTheme"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/create_a_safe_pin_label"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
